more ui updates

--- a/index.html
+++ b/index.html
@@ -192,9 +192,9 @@
               </div>
               <div style="padding: 0 2rem">
                 <div>
-                  <h5 data-project-info="name">Hospital Center</h5>
+                  <h5 data-project-info="cardName">Hospital Center</h5>
                   <p
-                    data-project-info="description"
+                    data-project-info="cardDescription"
                     style="
                       color: var(--background-300);
                       font-size: var(--font-base);
