--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
                       style="width: 100%"
                     />
                   </div>
-                  <span class="material-icons-round">add</span>
+                  <span class="material-symbols-rounded"> add </span>
                 </div>
               </div>
               <div
