--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
     />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
+    <link rel="stylesheet" href="components.css" />
     <link rel="stylesheet" href="style.css" />
     <link rel="icon" type="image/x-icon" href="/assets/cdt-favicon.ico" />
   </head>
@@ -354,7 +359,7 @@
           <div
             id="viewer-container"
             class="dashboard-card"
-            style="min-width: 0"
+            style="min-width: 0; position: relative"
           ></div>
         </div>
       </section>
