--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     />
     <link rel="stylesheet" href="components.css" />
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons+Round"
+    />
     <link rel="icon" type="image/x-icon" href="/assets/cdt-favicon.ico" />
   </head>
   <body>
