delete todo and dispose

--- a/index.html
+++ b/index.html
@@ -345,7 +345,14 @@
                         align-items: center;
                       "
                     >
-                      <span class="material-symbols-rounded">
+                      <span
+                        class="material-icons-round"
+                        style="
+                          padding: 10px;
+                          background-color: #686868;
+                          border-radius: var(--border-radius);
+                        "
+                      >
                         construction
                       </span>
                       <p>
